Сделана первая задача

--- a/Teorver_Homework_4.ipynb
+++ b/Teorver_Homework_4.ipynb
@@ -18,11 +18,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Решение\n",
+    "Пусть `a` - левая граница непрерывной равномерно распределенной случайной величины и `D(B)` - ее дисперсия.\n",
+    "Для непрерывной равномерно распределенной случайной величины дисперсия вичисляется по следующей формуле:\n",
+    "$$D(B) = \\frac{(b - a)^2}{12}$$\n",
+    "Раз нам известна левая граница и дисперсия, мы можем вычислить правую границу `b` и, следовательно, среднее `M`:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$D(B) = \\frac{(b - a)^2}{12} => (b - a)^2 = 12 \\cdot D(B) => \\\\ \n",
+    "=> b = 2 \\sqrt{3D(B)} + a$$\n",
+    "$$M = \\frac{(a+b)}{2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = 2.049193338482967\n",
+      "M = 1.2745966692414834\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0.5\n",
+    "D = 0.2\n",
+    "b = (12 * D)**0.5 + a\n",
+    "M = (a + b)/2\n",
+    "print(f\"b = {b}\\nM = {M}\")"
+   ]
   },
   {
    "cell_type": "markdown",
