--- a/Teorver_Homework_4.ipynb
+++ b/Teorver_Homework_4.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.integrate as integrate"
    ]
   },
   {
@@ -104,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f6808168b70>"
+       "<matplotlib.lines.Line2D at 0x7f68080e3208>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,8 +133,7 @@
    ],
    "source": [
     "def f(x, M, D):\n",
-    "    M = a = 178\n",
-    "    D = 25\n",
+    "    a = M\n",
     "    sig = D**0.5\n",
     "    return np.exp(-(x - a)**2 / (2*D)) / (sig * (2 * np.pi)**0.5)\n",
     "\n",
@@ -199,7 +199,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Фактически, для нахождения вероятности в каждом из случаев необходимо проиндегрировать функцию нормального распределения в заданных пределах:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    a = 174\n",
+    "    sig = 8 \n",
+    "    return np.exp(-(x - a)**2 / (2*D)) / (sig * (2 * np.pi)**0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 3 еще не доделана, но я ее обновлю по мере выполнения"
+   ]
   }
  ],
  "metadata": {
