--- a/Teorver_Homework_4.ipynb
+++ b/Teorver_Homework_4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Решение\n",
     "Построим для наглядности функцию нормального распределения исходя из имеющихся `M(X)` и `D(X)`:"
    ]
   },
@@ -200,26 +201,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Решение\n",
     "Фактически, для нахождения вероятности в каждом из случаев необходимо проиндегрировать функцию нормального распределения в заданных пределах:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вероятность того, что случайным образом выбранный взрослый человек имеет рост:\n",
+      "0. больше 174 см: 50.0000% (Проверка что интегрирование работает верно)\n",
+      "1. больше 190 см: 2.2750%\n",
+      "2. больше 182 см: 15.8655%\n",
+      "3. от 166 см до 190 см: 81.8595%\n",
+      "4. от 166 см до 182 см: 68.2689%\n",
+      "5. от 158 см до 190 см: 95.4500%\n",
+      "6. не выше 150 см или не ниже 190 см: 2.4100%\n",
+      "7. не выше 150 см или не ниже 198 см: 0.2700%\n",
+      "8. ниже 166 см: 15.8655%\n"
+     ]
+    }
+   ],
    "source": [
     "def f(x):\n",
     "    a = 174\n",
     "    sig = 8 \n",
-    "    return np.exp(-(x - a)**2 / (2*D)) / (sig * (2 * np.pi)**0.5)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Задача 3 еще не доделана, но я ее обновлю по мере выполнения"
+    "    return np.exp(-1 * (x - a)**2 / (2 * sig**2)) / (sig * (2 * np.pi)**0.5)\n",
+    "\n",
+    "\n",
+    "chance = lambda l, r: integrate.quad(f, l, r)[0]\n",
+    "\n",
+    "M = 174\n",
+    "\n",
+    "print(\"Вероятность того, что случайным образом выбранный взрослый человек имеет рост:\")\n",
+    "print(f\"0. больше 174 см: {chance(M,2*M):.4%} (Проверка что интегрирование работает верно)\")\n",
+    "print(f\"1. больше 190 см: {chance(190,2*M):.4%}\")\n",
+    "print(f\"2. больше 182 см: {chance(182,2*M):.4%}\")\n",
+    "print(f\"3. от 166 см до 190 см: {chance(166,190):.4%}\")\n",
+    "print(f\"4. от 166 см до 182 см: {chance(166,182):.4%}\")\n",
+    "print(f\"5. от 158 см до 190 см: {chance(158,190):.4%}\")\n",
+    "print(f\"6. не выше 150 см или не ниже 190 см: {chance(0,150) + chance(190,2*M):.4%}\")\n",
+    "print(f\"7. не выше 150 см или не ниже 198 см: {chance(0,150) + chance(198,2*M):.4%}\")\n",
+    "print(f\"8. ниже 166 см: {chance(0,166):.4%}\")"
    ]
   }
  ],
