Доработка первой задачи

--- a/Teorver_Homework_6.ipynb
+++ b/Teorver_Homework_6.ipynb
@@ -44,12 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.Series([35, 45, 190, 200, 40, 70, 54, 150, 120, 110])\n",
-    "Y = pd.Series([401, 574, 874, 919, 459, 739, 653, 902, 746, 832])"
+    "client = pd.DataFrame({\n",
+    "    'salary' : [35, 45, 190, 200, 40, 70, 54, 150, 120, 110],\n",
+    "    'scoring' : [401, 574, 874, 919, 459, 739, 653, 902, 746, 832]\n",
+    "},  columns=['salary','scoring'])\n",
+    "\n",
+    "X = client['salary']\n",
+    "Y = client['scoring']"
    ]
   },
   {
@@ -61,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10695.539999999994"
+       "9157.839999999997"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +121,7 @@
        "3882.9333333333334"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +141,7 @@
        "33854.32222222223"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +162,7 @@
        "       [10175.37777778, 33854.32222222]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +177,127 @@
    "metadata": {},
    "source": [
     "В данном случае полученные значения не равны. Грешу на малую выборку"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2)\n",
+    "Найдем коэффициент корреляции Пирсона.\n",
+    "Ручками:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.33866702, 0.88749009],\n",
+       "       [0.88749009, 2.95275283]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr = cov / (X.std() * Y.std())\n",
+    "corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Через функцию `corr()` библиотеки pandas.DataFrame:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "      <th>scoring</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>salary</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.88749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scoring</th>\n",
+       "      <td>0.88749</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          salary  scoring\n",
+       "salary   1.00000  0.88749\n",
+       "scoring  0.88749  1.00000"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client[['salary','scoring']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.88749009],\n",
+       "       [0.88749009, 1.        ]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(X, Y)"
    ]
   },
   {
