Доработка первой задачи 2

--- a/Teorver_Homework_6.ipynb
+++ b/Teorver_Homework_6.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "9157.839999999997"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,53 +106,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10175.37777777778"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov = ((X - MX) * (Y - MY)).sum() / (X.shape[0] - 1)\n",
+    "cov"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Либо воспользуемся `numpy.cov()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3882.9333333333334"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.var()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33854.32222222223"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y.var()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +148,7 @@
        "       [10175.37777778, 33854.32222222]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -202,7 +188,7 @@
        "       [0.88749009, 2.95275283]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Через функцию `corr()` библиотеки pandas.DataFrame:"
+    "Через функцию `corr()` библиотеки `pandas.DataFrame`:"
    ]
   },
   {
@@ -277,6 +263,13 @@
    ],
    "source": [
     "client[['salary','scoring']].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Через функцию `corrcoef()` библиотеки `numpy`:"
    ]
   },
   {
