--- a/Teorver_Homework_5.ipynb
+++ b/Teorver_Homework_5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выдвиним гипотезу, что в выборке из 100 шариков средний диаметр оказался равным 17.5 мм. Уровень значимости $\\alpha$ = 0.05\n",
+    "Выдвиним альтернативную гипотезу, что в выборке из 100 шариков средний диаметр оказался равным 17.5 мм. Уровень значимости $\\alpha$ = 0.05\n",
     "\n",
-    "Далее, плоределим критическую область. При $\\alpha$ = 0.05 мы фактически ищем область двух сигм: значения величины $T$ с вероятностью 0.95 попадают в интервал:\n",
+    "Далее, определим критическую область. При $\\alpha$ = 0.05 мы фактически ищем область двух сигм: значения величины $T$ с вероятностью 0.95 попадают в интервал:\n",
     "$$\\left( 17 - \\dfrac{4}{\\sqrt{n}}, 17 + \\dfrac{4}{\\sqrt{n}} \\right).$$\n",
     "\n",
     "Поэтому для нашего выбора $\\alpha$ подойдёт двусторонняя критическая область\n",
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(198.5, 4.453463071962462)"
+       "(198.5, 4.224926034855522)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
    "source": [
     "cookes = np.array([202, 203, 199, 197, 195, 201, 200, 204, 194, 190])\n",
     "m = cookes.mean()\n",
-    "s = cookes.std(ddof=1)\n",
+    "s = cookes.std()\n",
     "m,s"
    ]
   },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(193.92327845730884, 203.07672154269116)"
+       "(194.1581407126209, 202.8418592873791)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Из чего следует что утверждение продавца верно при данной доверительнй вероятности"
+    "Из чего следует что утверждение продавца при данной доверительнй вероятности не опровергнута"
    ]
   }
  ],
