--- a/Teorver_Homework_7.ipynb
+++ b/Teorver_Homework_7.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "from scipy import stats\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -184,6 +184,94 @@
    ],
    "source": [
     "np.corrcoef(x1, y1) ** 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Также, вычислим среднюю ошибку апроксимации:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11469251843561709"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.abs((y1 - z1) / y1).mean()\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оценим статистическую значимость уравнения линейной регрессии с помощью F-критерия Фишера."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.67164085966437"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k1 = 1\n",
+    "k2 = y1.shape[0] - 1 - 1\n",
+    "T1 = (R1 / (1 - R1)) * (k2 / k1)\n",
+    "T1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вычислим критическое значение для alpha = 0.05:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.317655071578714"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "F_crit = stats.f.ppf(1 - alpha, k1, k2)\n",
+    "F_crit"
    ]
   },
   {
