--- a/Teorver_Homework_7.ipynb
+++ b/Teorver_Homework_7.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вычислим критическое значение для alpha = 0.05:"
+    "Вычислим критическое значение для $\\alpha = 0.05$:"
    ]
   },
   {
@@ -272,6 +272,71 @@
     "\n",
     "F_crit = stats.f.ppf(1 - alpha, k1, k2)\n",
     "F_crit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Так как критическое значение ниже статистической значимости, то мы можем утверждать что уравнение регрессии статистически значимо."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вычислим значение стандартной ошибки коэффициента наклона:\n",
+    "\n",
+    "$$S_{slope} = \\sqrt{\\dfrac{\\frac{1}{n - 2} \\displaystyle\\sum_{i=1}^{n}(y_i - z_i)^2}{\\displaystyle\\sum_{i=1}^n (x_i - \\overline{x})^2}},$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.245284006742512"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_slope = np.sqrt(((y1 - z1) ** 2).sum() / (y1.shape[0] - 2) / (x1 - np.mean(x1)) ** 2).sum()\n",
+    "s_slope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "и построим доверительные интервалы с помощью t-статистики Стьюдента. Пр"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-62.51308603714548, 67.75416380195101)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = 2.3060\n",
+    "(b1 - t * s_slope, b1 + t * s_slope)"
    ]
   },
   {
