--- a/Teorver_Homework_7.ipynb
+++ b/Teorver_Homework_7.ipynb
@@ -292,44 +292,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28.245284006742512"
+       "0.48108279568516005"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_slope = np.sqrt(((y1 - z1) ** 2).sum() / (y1.shape[0] - 2) / (x1 - np.mean(x1)) ** 2).sum()\n",
+    "s_slope = np.sqrt(((y1 - z1) ** 2).sum() / (y1.shape[0] - 2) / ((x1 - np.mean(x1)) ** 2).sum())\n",
     "s_slope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48108279568516005"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def standard_error_slope(x, y, z):\n",
+    "    n = x.shape[0]\n",
+    "    \n",
+    "    upper = ((y - z) ** 2).sum() / (n - 2)\n",
+    "    lower = ((x - x.mean()) ** 2).sum()\n",
+    "    \n",
+    "    return np.sqrt(upper / lower)\n",
+    "\n",
+    "standard_error_slope(x1,y1,z1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "и построим доверительные интервалы с помощью t-статистики Стьюдента. Пр"
+    "и построим доверительные интервалы с помощью t-статистики Стьюдента. При $n = 10$ и $\\alpha = 0.05$ коэффециент $t_{1-\\alpha, n-2} = 2.3060$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-62.51308603714548, 67.75416380195101)"
+       "(1.5111619555527858, 3.729915809252744)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
