--- a/Teorver_Homework_8.ipynb
+++ b/Teorver_Homework_8.ipynb
@@ -12,15 +12,280 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Файл пуст. Будет сделан до понедельника 10 июня"
+    "### Задача 1\n",
+    "\n",
+    "Провести дисперсионный анализ для определения того, есть ли различия среднего роста среди взрослых футболистов, хоккеистов и штангистов. Даны значения роста в трех группах случайно выбранных спортсменов:\n",
+    "\n",
+    "`\n",
+    "football_players = [173, 175, 180, 178, 177, 185, 183, 182]\n",
+    "hockey_players = [177, 179, 180, 188, 177, 172, 171, 184, 180]\n",
+    "lifters = [172, 173, 169, 177, 166, 180, 178, 177, 172, 166, 170]`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Запишем данные в массивы, посчитаем их среднее"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = np.array([173, 175, 180, 178, 177, 185, 183, 182], dtype=np.float64)\n",
+    "y2 = np.array([177, 179, 180, 188, 177, 172, 171, 184, 180], dtype=np.float64)\n",
+    "y3 = np.array([172, 173, 169, 177, 166, 180, 178, 177, 172, 166, 170], dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(179.125, 178.66666666666666, 172.72727272727272)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1 = y1.shape[0]\n",
+    "n2 = y2.shape[0]\n",
+    "n3 = y3.shape[0]\n",
+    "\n",
+    "y1_mean = y1.mean()\n",
+    "y2_mean = y2.mean()\n",
+    "y3_mean = y3.mean()\n",
+    "\n",
+    "y1_mean, y2_mean, y3_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[173. 175. 180. 178. 177. 185. 183. 182. 177. 179. 180. 188. 177. 172.\n",
+      " 171. 184. 180. 172. 173. 169. 177. 166. 180. 178. 177. 172. 166. 170.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.concatenate([y1, y2, y3])\n",
+    "\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "176.46428571428572"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_mean = y.mean()\n",
+    "y_mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Подсчитаем сумму квадратов отклонений груповых значений и остаточную сумму квадратов "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(253.9074675324678, 577.0568181818182)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S2_F = n1 * (y1_mean - y_mean) ** 2 + n2 * (y2_mean - y_mean) ** 2 + n3 * (y3_mean - y_mean) ** 2\n",
+    "\n",
+    "S2_res = ((y1 - y1_mean) ** 2).sum() + ((y2 - y2_mean) ** 2).sum() + ((y3 - y3_mean) ** 2).sum()\n",
+    "\n",
+    "S2_F, S2_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(830.964285714286, 830.9642857142854)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S2_F + S2_res,  ((y - y_mean) ** 2).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Подсчитаем несмещенную оценку дисперсии "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(126.9537337662339, 23.08227272727273)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 3\n",
+    "n = n1 + n2 + n3\n",
+    "\n",
+    "k1 = k - 1\n",
+    "k2 = n - k\n",
+    "\n",
+    "sigma2_F = S2_F / k1\n",
+    "sigma2_res = S2_res / k2\n",
+    "\n",
+    "sigma2_F, sigma2_res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вычислим гипотезу о статистической незначительности отклонений среднего в группах"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.500053450812598"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T = sigma2_F / sigma2_res\n",
+    "T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вычислим критическое значение для гипотезы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3851899614491687"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "F_crit = stats.f.ppf(1 - alpha, k1, k2)\n",
+    "F_crit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Так как $T > F_{crit}$, можно утверждать что отличия среднего роста между группами статистически значимы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задача 2\n",
+    "Курсовая работа по теории вероятности и математической статистики можно оценить [здесь](https://github.com/DmitryVGusev/GB-Teorver/blob/master/Teorver_Coursework.ipynb)"
+   ]
   }
  ],
  "metadata": {
